# EEGClip

./: README-Chinese.md  README.md  custom_instructions.md  main.py  pyproject.toml  requirements.txt
EEGClip/: clip_models.py  loss_methods.py
configs/: __init__.py  eegclip.yaml  preprocess_config.py
results/: few_shot_plot_results_2.py  medication_wilcoxon.ipynb
scripts/: eegclip_train_eval.py
scripts/classif/: classification_tuh.py
scripts/experiments/frontiers_revisions/: compute_gradients.py  eval_zc.py  eval_zc_old.py  load_sentences.py  saliency.py  saliency_plot.py  test.py  tests.py  tuh_saliency.py
scripts/generate_plots/: baselines_schema.aux  baselines_schema.fdb_latexmk  baselines_schema.fls  baselines_schema.tex  few_shot.py
scripts/generate_plots/example_plots/: method_comp.py
scripts/text_embedding/: README.md  text_embedding.py  zc_sentences_emb_dict.json
