[project]
name = "eegclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "braindecode>=0.8.1",
    "h5py>=3.14.0",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "lightning>=2.5.2",
    "lightning-fabric>=2.5.2",
    "matplotlib>=3.10.3",
    "moabb>=1.2.0",
    "pytorch-lightning>=2.5.2",
    "transformers>=4.53.2",
    "wandb>=0.21.0",
]
